; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_umtx.c_umtx_robust_lists.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_umtx.c_umtx_robust_lists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32, i32, i32 }
%struct.umtx_robust_lists_params = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thread*, %struct.umtx_robust_lists_params*)* @umtx_robust_lists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @umtx_robust_lists(%struct.thread* %0, %struct.umtx_robust_lists_params* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.umtx_robust_lists_params*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.umtx_robust_lists_params* %1, %struct.umtx_robust_lists_params** %4, align 8
  %5 = load %struct.umtx_robust_lists_params*, %struct.umtx_robust_lists_params** %4, align 8
  %6 = getelementptr inbounds %struct.umtx_robust_lists_params, %struct.umtx_robust_lists_params* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.thread*, %struct.thread** %3, align 8
  %9 = getelementptr inbounds %struct.thread, %struct.thread* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load %struct.umtx_robust_lists_params*, %struct.umtx_robust_lists_params** %4, align 8
  %11 = getelementptr inbounds %struct.umtx_robust_lists_params, %struct.umtx_robust_lists_params* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.thread*, %struct.thread** %3, align 8
  %14 = getelementptr inbounds %struct.thread, %struct.thread* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.umtx_robust_lists_params*, %struct.umtx_robust_lists_params** %4, align 8
  %16 = getelementptr inbounds %struct.umtx_robust_lists_params, %struct.umtx_robust_lists_params* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.thread*, %struct.thread** %3, align 8
  %19 = getelementptr inbounds %struct.thread, %struct.thread* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
